# browser-agent-demo

./: .gitignore  CLAUDE.md  NOTICE.md  README.md  SETUP.md  pyproject.toml  spec.md
.github/: dependabot.yml
.github/workflows/: drift-check.yml
artifacts/: baseline.json  baseline_v2.json  baseline_v3.json  baseline_v4.json  baseline_v5.json
examples/: baseline.py  baseline_v2.py  baseline_v3.py  baseline_v4.py  baseline_v5.py
memory_bank/: activeContext.md  decisionLog.md  logbook.md  productContext.md  systemPatterns.md
tests/: test_artifacts.py  test_examples_syntax.py  test_workflow.py
